--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -11,20 +11,22 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
     <style>
         body { 
-            font-family: Arial, sans-serif; 
+            font-family: 'Roboto', sans-serif;
             margin: 0; 
             padding: 0; 
             background-color: #f0f0f0; 
+            color: #333;
         }
         .container { 
             display: flex; 
             height: 100vh; 
         }
         .sidebar { 
-            width: 300px; 
-            background-color: #fff; 
+            width: 350px; 
+            background-color: #2c3e50; 
             padding: 20px; 
             overflow-y: auto; 
+            box-shadow: 2px 0 5px rgba(0,0,0,0.1);
         }
         .main-content { 
             flex-grow: 1; 
@@ -33,6 +35,8 @@
         }
         #map { 
             flex-grow: 1; 
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         .order-list { 
             max-height: calc(100vh - 100px); 
@@ -41,26 +45,24 @@
         .order-item { 
             background-color: #fff; 
             margin-bottom: 10px; 
-            padding: 10px; 
-            border-radius: 5px; 
-            position: relative; 
+            padding: 15px; 
+            border-radius: 8px; 
+            position: relative;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         .order-item:hover { 
-            background-color: #f0f0f0; 
+            transform: translateY(-3px);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.15);
         }
         .filter-section { 
             margin-bottom: 20px; 
         }
-        button { 
-            background-color: #4CAF50; 
-            color: white; 
-            border: none; 
-            padding: 10px; 
-            cursor: pointer; 
-            margin-top: 10px; 
-        }
-        button:hover { 
-            background-color: #45a049; 
+        h2 {
+            color: #ecf0f1;
+            margin-bottom: 20px;
+            font-size: 24px;
+            text-align: center;
         }
         .order-options { 
             position: absolute; 
@@ -69,12 +71,26 @@
         }
         .order-options i { 
             cursor: pointer; 
-            margin-left: 5px; 
+            margin-left: 5px;
+            color: #3498db;
+            transition: color 0.3s ease;
+        }
+        .order-options i:hover {
+            color: #2980b9;
         }
         .error { 
-            color: red; 
+            color: #e74c3c; 
             font-weight: bold; 
+            background-color: #fadbd8;
+            padding: 10px;
+            border-radius: 5px;
+            margin-top: 10px;
         }
+        /* Estilos para os status dos pedidos */
+        .status-accepted { color: #f39c12; }
+        .status-onGoing { color: #2ecc71; }
+        .status-delivered { color: #3498db; }
+        .status-closed { color: #95a5a6; }
     </style>
 </head>
 <body>
@@ -116,14 +132,144 @@
             const centerAddress = { lat: -5.750636, lng: -35.254625 };
             map = new google.maps.Map(document.getElementById('map'), {
                 center: centerAddress,
-                zoom: 16
+                zoom: 16,
+                styles: [
+                    {
+                        "featureType": "all",
+                        "elementType": "labels.text.fill",
+                        "stylers": [{"color": "#7c93a3"},{"lightness": "-10"}]
+                    },
+                    {
+                        "featureType": "administrative.country",
+                        "elementType": "geometry",
+                        "stylers": [{"visibility": "on"}]
+                    },
+                    {
+                        "featureType": "administrative.country",
+                        "elementType": "geometry.stroke",
+                        "stylers": [{"color": "#a0a4a5"}]
+                    },
+                    {
+                        "featureType": "administrative.province",
+                        "elementType": "geometry.stroke",
+                        "stylers": [{"color": "#62838e"}]
+                    },
+                    {
+                        "featureType": "landscape",
+                        "elementType": "geometry.fill",
+                        "stylers": [{"color": "#dde3e3"}]
+                    },
+                    {
+                        "featureType": "landscape.man_made",
+                        "elementType": "geometry.stroke",
+                        "stylers": [{"color": "#3f4a51"},{"weight": "0.30"}]
+                    },
+                    {
+                        "featureType": "poi",
+                        "elementType": "all",
+                        "stylers": [{"visibility": "simplified"}]
+                    },
+                    {
+                        "featureType": "poi.attraction",
+                        "elementType": "all",
+                        "stylers": [{"visibility": "on"}]
+                    },
+                    {
+                        "featureType": "poi.business",
+                        "elementType": "all",
+                        "stylers": [{"visibility": "off"}]
+                    },
+                    {
+                        "featureType": "poi.government",
+                        "elementType": "all",
+                        "stylers": [{"visibility": "off"}]
+                    },
+                    {
+                        "featureType": "poi.park",
+                        "elementType": "all",
+                        "stylers": [{"visibility": "on"}]
+                    },
+                    {
+                        "featureType": "poi.place_of_worship",
+                        "elementType": "all",
+                        "stylers": [{"visibility": "off"}]
+                    },
+                    {
+                        "featureType": "poi.school",
+                        "elementType": "all",
+                        "stylers": [{"visibility": "off"}]
+                    },
+                    {
+                        "featureType": "poi.sports_complex",
+                        "elementType": "all",
+                        "stylers": [{"visibility": "off"}]
+                    },
+                    {
+                        "featureType": "road",
+                        "elementType": "all",
+                        "stylers": [{"saturation": "-100"},{"visibility": "on"}]
+                    },
+                    {
+                        "featureType": "road",
+                        "elementType": "geometry.stroke",
+                        "stylers": [{"visibility": "on"}]
+                    },
+                    {
+                        "featureType": "road.highway",
+                        "elementType": "geometry.fill",
+                        "stylers": [{"color": "#bbcacf"}]
+                    },
+                    {
+                        "featureType": "road.highway",
+                        "elementType": "geometry.stroke",
+                        "stylers": [{"lightness": "0"},{"color": "#bbcacf"},{"weight": "0.50"}]
+                    },
+                    {
+                        "featureType": "road.highway",
+                        "elementType": "labels",
+                        "stylers": [{"visibility": "on"}]
+                    },
+                    {
+                        "featureType": "road.highway",
+                        "elementType": "labels.text",
+                        "stylers": [{"visibility": "on"}]
+                    },
+                    {
+                        "featureType": "road.highway.controlled_access",
+                        "elementType": "geometry.fill",
+                        "stylers": [{"color": "#ffffff"}]
+                    },
+                    {
+                        "featureType": "road.highway.controlled_access",
+                        "elementType": "geometry.stroke",
+                        "stylers": [{"color": "#a9b4b8"}]
+                    },
+                    {
+                        "featureType": "road.arterial",
+                        "elementType": "labels.icon",
+                        "stylers": [{"invert_lightness": true},{"saturation": "-7"},{"lightness": "3"},{"gamma": "1.80"},{"weight": "0.01"}]
+                    },
+                    {
+                        "featureType": "transit",
+                        "elementType": "all",
+                        "stylers": [{"visibility": "off"}]
+                    },
+                    {
+                        "featureType": "water",
+                        "elementType": "geometry.fill",
+                        "stylers": [{"color": "#a3c7df"}]
+                    }
+                ]
             });
 
             new google.maps.Marker({
                 position: centerAddress,
                 map: map,
                 title: "Rua Serra do Mar, 1216, Potengi",
-                icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png'
+                icon: {
+                    url: "https://maps.google.com/mapfiles/ms/icons/blue-dot.png",
+                    scaledSize: new google.maps.Size(40, 40)
+                }
             });
         }
 
@@ -137,7 +283,6 @@
                 const startDate = formatDate(new Date(now.getTime() - 24 * 60 * 60 * 1000)); // 24 horas atrás
                 const endDate = formatDate(now);
                 
-                console.log('Buscando pedidos da API Foody...');
                 const response = await axios.get(firebaseFunctionUrl, {
                     headers: {
                         'Authorization': authToken,
@@ -147,27 +292,14 @@
                         url: `${foodyApiUrl}?startDate=${encodeURIComponent(startDate)}&endDate=${encodeURIComponent(endDate)}`
                     }
                 });
-                console.log('Resposta da API Foody:', response.data);
-                
+                console.log('Pedidos recebidos:', response.data);
                 const filteredOrders = response.data.filter(order => 
                     ['onGoing', 'ready', 'dispatched', 'accepted'].includes(order.status)
                 );
-                console.log('Pedidos filtrados:', filteredOrders);
-
                 updateOrderList(filteredOrders);
                 updateMap(filteredOrders);
-                saveOrdersToFirestore(filteredOrders);
             } catch (error) {
                 console.error('Erro ao buscar pedidos:', error);
-                if (error.response) {
-                    console.error('Error response:', error.response.data);
-                    console.error('Error status:', error.response.status);
-                    console.error('Error headers:', error.response.headers);
-                } else if (error.request) {
-                    console.error('Error request:', error.request);
-                } else {
-                    console.error('Error message:', error.message);
-                }
                 document.getElementById('orderList').innerHTML = '<p class="error">Erro ao carregar pedidos. Por favor, tente novamente mais tarde.</p>';
             }
         }
@@ -180,7 +312,7 @@
                 orderDiv.className = 'order-item';
                 orderDiv.innerHTML = `
                     <h3>Pedido #${order.id}</h3>
-                    <p>Status: ${getStatusDisplay(order.status)}</p>
+                    <p class="status-${order.status.toLowerCase()}">${getStatusDisplay(order.status)}</p>
                     <p>Cliente: ${order.customer.customerName}</p>
                     ${order.courier ? `<p>Motoboy: ${order.courier.courierName}</p>` : ''}
                     <div class="order-options">
@@ -202,7 +334,10 @@
                         position: { lat, lng },
                         map: map,
                         title: `Pedido #${order.id}`,
-                        icon: 'http://maps.google.com/mapfiles/ms/icons/red-dot.png'
+                        icon: {
+                            url: "https://maps.google.com/mapfiles/ms/icons/red-dot.png",
+                            scaledSize: new google.maps.Size(40, 40)
+                        }
                     });
 
                     markers[order.uid] = marker;
@@ -223,118 +358,4 @@
                 const response = await axios.get(trackingUrl, {
                     headers: {
                         'Authorization': authToken,
-                        'Content-Type': 'application/json;charset=UTF-8'
-                    },
-                    params: {
-                        orderUid: order.uid
-                    }
-                });
-                const tracking = response.data;
-                if (tracking.courierLocationCoordinates) {
-                    const { lat, lng } = tracking.courierLocationCoordinates;
-                    const courierMarker = new google.maps.Marker({
-                        position: { lat, lng },
-                        map: map,
-                        title: `Motoboy - Pedido #${order.id}`,
-                        icon: {
-                            url: 'http://maps.google.com/mapfiles/ms/icons/motorcycling.png',
-                            scaledSize: new google.maps.Size(32, 32)
-                        }
-                    });
-
-                    markers[`courier-${order.uid}`] = courierMarker;
-
-                    courierMarker.addListener('click', () => {
-                        showCourierDetails(order, tracking);
-                    });
-                }
-            } catch (error) {
-                console.error(`Erro ao buscar localização do motoboy para o pedido ${order.uid}:`, error);
-            }
-        }
-
-        function centerOrderOnMap(orderUid) {
-            const marker = markers[orderUid] || markers[`courier-${orderUid}`];
-            if (marker) {
-                map.setCenter(marker.getPosition());
-                map.setZoom(16);
-            }
-        }
-
-        function getStatusDisplay(status) {
-            switch(status) {
-                case 'accepted': return 'Aceito';
-                case 'dispatched': return 'Despachado';
-                case 'onGoing': return 'A Caminho';
-                case 'ready': return 'Pronto';
-                default: return status;
-            }
-        }
-
-        function showOrderDetails(order) {
-            const infoWindow = new google.maps.InfoWindow({
-                content: `
-                    <div>
-                        <h3>Pedido #${order.id}</h3>
-                        <p>Cliente: ${order.customer.customerName}</p>
-                        <p>Endereço: ${order.deliveryPoint.address}</p>
-                        <p>Status: ${getStatusDisplay(order.status)}</p>
-                        ${order.courier ? `<p>Motoboy: ${order.courier.courierName}</p>` : ''}
-                    </div>
-                `
-            });
-
-            const marker = markers[order.uid];
-            if (marker) {
-                infoWindow.open(map, marker);
-            }
-        }
-
-        function showCourierDetails(order, tracking) {
-            const infoWindow = new google.maps.InfoWindow({
-                content: `
-                    <div>
-                        <h3>Motoboy - Pedido #${order.id}</h3>
-                        <p>Nome: ${order.courier.courierName}</p>
-                        <p>Status: ${tracking.status}</p>
-                        ${tracking.pointsToDelivery && tracking.pointsToDelivery.length > 0 ? 
-                            `<p>Posição na rota: ${tracking.pointsToDelivery[0].position}</p>` : ''}
-                    </div>
-                `
-            });
-
-            const marker = markers[`courier-${order.uid}`];
-            if (marker) {
-                infoWindow.open(map, marker);
-            }
-        }
-
-        function saveOrdersToFirestore(orders) {
-            console.log('Iniciando salvamento de pedidos no Firestore...');
-            orders.forEach(order => {
-                console.log('Tentando salvar pedido:', order.id);
-                db.collection('foodyOrders').doc(order.id.toString()).set(order)
-                    .then(() => {
-                        console.log('Pedido salvo com sucesso no Firestore:', order.id);
-                        // Verificar se o pedido foi realmente salvo
-                        return db.collection('foodyOrders').doc(order.id.toString()).get();
-                    })
-                    .then((docSnapshot) => {
-                        if (docSnapshot.exists) {
-                            console.log('Confirmado: Pedido existe no Firestore:', order.id);
-                        } else {
-                            console.error('Erro: Pedido não encontrado no Firestore após salvamento:', order.id);
-                        }
-                    })
-                    .catch(error => {
-                        console.error('Erro ao salvar ou verificar pedido:', order.id, error);
-                    });
-            });
-        }
-
-        initMap();
-        fetchOrders();
-        setInterval(fetchOrders, 10000); // Atualiza a cada 10 segundos
-    </script>
-</body>
-</html>
+                        'Content-Type': 'application/json;charset=UTF-
