--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -353,9 +353,107 @@
             }
         }
 
-        async function updateCourierLocation(order) {
+async function updateCourierLocation(order) {
             try {
                 const response = await axios.get(trackingUrl, {
                     headers: {
                         'Authorization': authToken,
-                        'Content-Type': 'application/json;charset=UTF-
+                        'Content-Type': 'application/json;charset=UTF-8'
+                    },
+                    params: {
+                        orderUid: order.uid
+                    }
+                });
+                const tracking = response.data;
+                if (tracking.courierLocationCoordinates) {
+                    const { lat, lng } = tracking.courierLocationCoordinates;
+                    const courierMarker = new google.maps.Marker({
+                        position: { lat, lng },
+                        map: map,
+                        title: `Motoboy - Pedido #${order.id}`,
+                        icon: {
+                            url: 'data:image/svg+xml;charset=UTF-8,' + encodeURIComponent(`
+                                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="50" viewBox="0 0 40 50">
+                                    <text x="20" y="15" font-family="Arial" font-size="12" fill="black" text-anchor="middle">${order.courier.courierName.split(' ')[0]}</text>
+                                    <path d="M20 20 C10 20 5 25 5 35 C5 40 10 45 20 45 C30 45 35 40 35 35 C35 25 30 20 20 20 Z" fill="#3498db"/>
+                                    <circle cx="20" cy="32" r="8" fill="#2c3e50"/>
+                                </svg>
+                            `),
+                            scaledSize: new google.maps.Size(40, 50),
+                            anchor: new google.maps.Point(20, 50),
+                        }
+                    });
+
+                    markers[`courier-${order.uid}`] = courierMarker;
+
+                    courierMarker.addListener('click', () => {
+                        showCourierDetails(order, tracking);
+                    });
+                }
+            } catch (error) {
+                console.error(`Erro ao buscar localização do motoboy para o pedido ${order.uid}:`, error);
+            }
+        }
+
+        function centerOrderOnMap(orderUid) {
+            const marker = markers[orderUid] || markers[`courier-${orderUid}`];
+            if (marker) {
+                map.setCenter(marker.getPosition());
+                map.setZoom(16);
+            }
+        }
+
+        function getStatusDisplay(status) {
+            switch(status) {
+                case 'accepted': return 'Aceito';
+                case 'dispatched': return 'Despachado';
+                case 'onGoing': return 'A Caminho';
+                case 'ready': return 'Pronto';
+                default: return status;
+            }
+        }
+
+        function showOrderDetails(order) {
+            const infoWindow = new google.maps.InfoWindow({
+                content: `
+                    <div style="max-width: 200px;">
+                        <h3>Pedido #${order.id}</h3>
+                        <p>Cliente: ${order.customer.customerName}</p>
+                        <p>Endereço: ${order.deliveryPoint.address}</p>
+                        <p>Status: ${getStatusDisplay(order.status)}</p>
+                        ${order.courier ? `<p>Motoboy: ${order.courier.courierName}</p>` : ''}
+                    </div>
+                `
+            });
+
+            const marker = markers[order.uid];
+            if (marker) {
+                infoWindow.open(map, marker);
+            }
+        }
+
+        function showCourierDetails(order, tracking) {
+            const infoWindow = new google.maps.InfoWindow({
+                content: `
+                    <div style="max-width: 200px;">
+                        <h3>Motoboy - Pedido #${order.id}</h3>
+                        <p>Nome: ${order.courier.courierName}</p>
+                        <p>Status: ${tracking.status}</p>
+                        ${tracking.pointsToDelivery && tracking.pointsToDelivery.length > 0 ? 
+                            `<p>Posição na rota: ${tracking.pointsToDelivery[0].position}</p>` : ''}
+                    </div>
+                `
+            });
+
+            const marker = markers[`courier-${order.uid}`];
+            if (marker) {
+                infoWindow.open(map, marker);
+            }
+        }
+
+        initMap();
+        fetchOrders();
+        setInterval(fetchOrders, 10000); // Atualiza a cada 10 segundos
+    </script>
+</body>
+</html>
