--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -91,6 +91,7 @@
         .status-onGoing { color: #2ecc71; }
         .status-delivered { color: #3498db; }
         .status-closed { color: #95a5a6; }
+        .status-ready { color: #9b59b6; }
     </style>
 </head>
 <body>
@@ -294,7 +295,7 @@
                 });
                 console.log('Pedidos recebidos:', response.data);
                 const filteredOrders = response.data.filter(order => 
-                    ['onGoing', 'ready', 'dispatched', 'accepted'].includes(order.status)
+                    ['onGoing', 'ready', 'dispatched', 'accepted', 'closed'].includes(order.status)
                 );
                 updateOrderList(filteredOrders);
                 updateMap(filteredOrders);
@@ -315,6 +316,9 @@
                     <p class="status-${order.status.toLowerCase()}">${getStatusDisplay(order.status)}</p>
                     <p>Cliente: ${order.customer.customerName}</p>
                     ${order.courier ? `<p>Motoboy: ${order.courier.courierName}</p>` : ''}
+                    <p>Método de Pagamento: ${order.paymentMethod || 'N/A'}</p>
+                    <p>Total do Pedido: R$ ${order.orderTotal ? order.orderTotal.toFixed(2) : 'N/A'}</p>
+                    ${order.notes ? `<p>Observações: ${order.notes}</p>` : ''}
                     <div class="order-options">
                         <i class="fas fa-map-marker-alt" onclick="centerOrderOnMap('${order.uid}')"></i>
                     </div>
@@ -335,25 +339,49 @@
                         map: map,
                         title: `Pedido #${order.id}`,
                         icon: {
-                            url: "https://maps.google.com/mapfiles/ms/icons/red-dot.png",
-                            scaledSize: new google.maps.Size(40, 40)
+                            url: getOrderMarkerIcon(order.status, order.id),
+                            scaledSize: new google.maps.Size(32, 32),
+                            anchor: new google.maps.Point(16, 32)
                         }
                     });
 
                     markers[order.uid] = marker;
 
-                    marker.addListener('click', () => {
+marker.addListener('click', () => {
                         showOrderDetails(order);
                     });
                 }
 
-                if (order.status === 'onGoing') {
+                if (order.status === 'onGoing' || order.status === 'closed') {
                     await updateCourierLocation(order);
                 }
             }
         }
 
-async function updateCourierLocation(order) {
+        function getOrderMarkerIcon(status, orderId) {
+            let color;
+            switch (status) {
+                case 'ready':
+                    color = 'purple';
+                    break;
+                case 'onGoing':
+                    color = 'lightblue';
+                    break;
+                case 'accepted':
+                    color = 'yellow';
+                    break;
+                default:
+                    color = 'gray';
+            }
+            return `data:image/svg+xml;charset=UTF-8,` + encodeURIComponent(`
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                    <rect width="32" height="32" fill="${color}" />
+                    <text x="16" y="20" font-family="Arial" font-size="12" fill="black" text-anchor="middle">${orderId}</text>
+                </svg>
+            `);
+        }
+
+        async function updateCourierLocation(order) {
             try {
                 const response = await axios.get(trackingUrl, {
                     headers: {
@@ -370,21 +398,32 @@ async function updateCourierLocation(order) {
                     const courierMarker = new google.maps.Marker({
                         position: { lat, lng },
                         map: map,
-                        title: `Motoboy - Pedido #${order.id}`,
+                        title: `Motoboy - ${order.courier.courierName}`,
                         icon: {
-                            url: 'data:image/svg+xml;charset=UTF-8,' + encodeURIComponent(`
-                                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="50" viewBox="0 0 40 50">
-                                    <text x="20" y="15" font-family="Arial" font-size="12" fill="black" text-anchor="middle">${order.courier.courierName.split(' ')[0]}</text>
-                                    <path d="M20 20 C10 20 5 25 5 35 C5 40 10 45 20 45 C30 45 35 40 35 35 C35 25 30 20 20 20 Z" fill="#3498db"/>
-                                    <circle cx="20" cy="32" r="8" fill="#2c3e50"/>
-                                </svg>
-                            `),
-                            scaledSize: new google.maps.Size(40, 50),
-                            anchor: new google.maps.Point(20, 50),
+                            url: 'https://i.ibb.co/g9ssC3D/capacete.png',
+                            scaledSize: new google.maps.Size(16, 16),
+                            anchor: new google.maps.Point(8, 8)
                         }
                     });
 
+                    const label = new google.maps.Marker({
+                        position: { lat, lng: lng + 0.0003 },
+                        map: map,
+                        icon: {
+                            url: `data:image/svg+xml;charset=UTF-8,` + encodeURIComponent(`
+                                <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20">
+                                    <rect width="60" height="20" rx="10" ry="10" fill="${order.status === 'onGoing' ? 'red' : 'green'}" />
+                                    <text x="30" y="14" font-family="Arial" font-size="12" fill="white" text-anchor="middle">${order.courier.courierName.substring(0, 5).toUpperCase()}</text>
+                                </svg>
+                            `),
+                            scaledSize: new google.maps.Size(60, 20),
+                            anchor: new google.maps.Point(30, 10)
+                        },
+                        clickable: false
+                    });
+
                     markers[`courier-${order.uid}`] = courierMarker;
+                    markers[`courier-label-${order.uid}`] = label;
 
                     courierMarker.addListener('click', () => {
                         showCourierDetails(order, tracking);
@@ -409,6 +448,7 @@ async function updateCourierLocation(order) {
                 case 'dispatched': return 'Despachado';
                 case 'onGoing': return 'A Caminho';
                 case 'ready': return 'Pronto';
+                case 'closed': return 'Finalizado';
                 default: return status;
             }
         }
@@ -422,6 +462,9 @@ async function updateCourierLocation(order) {
                         <p>Endereço: ${order.deliveryPoint.address}</p>
                         <p>Status: ${getStatusDisplay(order.status)}</p>
                         ${order.courier ? `<p>Motoboy: ${order.courier.courierName}</p>` : ''}
+                        <p>Método de Pagamento: ${order.paymentMethod || 'N/A'}</p>
+                        <p>Total do Pedido: R$ ${order.orderTotal ? order.orderTotal.toFixed(2) : 'N/A'}</p>
+                        ${order.notes ? `<p>Observações: ${order.notes}</p>` : ''}
                     </div>
                 `
             });
@@ -436,11 +479,11 @@ async function updateCourierLocation(order) {
             const infoWindow = new google.maps.InfoWindow({
                 content: `
                     <div style="max-width: 200px;">
-                        <h3>Motoboy - Pedido #${order.id}</h3>
-                        <p>Nome: ${order.courier.courierName}</p>
-                        <p>Status: ${tracking.status}</p>
+                        <h3>Motoboy - ${order.courier.courierName}</h3>
+                        <p>Status: ${getStatusDisplay(order.status)}</p>
                         ${tracking.pointsToDelivery && tracking.pointsToDelivery.length > 0 ? 
                             `<p>Posição na rota: ${tracking.pointsToDelivery[0].position}</p>` : ''}
+                        <p>Pedido atual: #${order.id}</p>
                     </div>
                 `
             });
